--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +10,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
   <header class="site-header">
-    <div class="container">
+    <a href="#" class="logo">
+      <img src="assets/icons/logo-mobile.svg" alt="CareerPath">
+    </a>
+    <div class="header-actions">
+      <a href="#" class="theme-toggle">
+        <img src="assets/icons/moon.svg" alt="Theme">
+      </a>
+      <button type="button" class="burger-menu" aria-expanded="false">
+        <img src="assets/icons/burger.svg" alt="Menu">
+      </button>
     </div>
   </header>
 
@@ -23,4 +34,5 @@
   <footer class="site-footer">
   </footer>
 </body>
+
 </html>
