--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="site-header">
     <a href="#" class="logo">
-      <img src="assets/icons/logo-mobile.svg" alt="CareerPath">
+      <img src="assets/icons/logo-mobile-light.svg" alt="CareerPath">
     </a>
     <div class="header-actions">
       <a href="#" class="theme-toggle">
@@ -35,4 +35,5 @@
   </footer>
 </body>
 
+<script src="js/script.js"></script>
 </html>
