--- a/index.html
+++ b/index.html
@@ -13,17 +13,23 @@
 
 <body>
   <header class="site-header">
-    <a href="#" class="logo">
-      <img src="assets/icons/logo-mobile-light.svg" alt="CareerPath">
-    </a>
-    <div class="header-actions">
-      <a href="#" class="theme-toggle">
-        <img src="assets/icons/moon.svg" alt="Theme">
-      </a>
-      <button type="button" class="burger-menu" aria-expanded="false">
-        <img src="assets/icons/burger.svg" alt="Menu">
-      </button>
+    <div class="site-header-container">
+      <a href="#" class="logo"></a>
+      <div class="header-actions">
+        <button type="button" class="theme-toggle"></button>
+        <button type="button" class="burger-menu"></button>
+      </div>
     </div>
+    <nav class="mobile-nav">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About US</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Sign In</a></li>
+        <li><a href="#">Free Trial</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main class="main-content">
@@ -36,4 +42,5 @@
 </body>
 
 <script src="js/script.js"></script>
+
 </html>
