Add mobile footer

--- a/index.html
+++ b/index.html
@@ -38,6 +38,24 @@
   </main>
 
   <footer class="site-footer">
+    <div class="footer-container">
+      <div class="footer-general">
+        <p class="footer-logo">CareerPathNow</p>
+        <p>Address of the organization</p>
+        <p>+01 (787)-8765456</p>
+      </div>
+      <div class="footer-socials">
+        <p>Find Us On Social Media:</p>
+        <div class="footer-socials-icons"></div>
+      </div>
+      <div class="footer-email">
+        <p>We’re Always Happy To Help</p>
+        <p>CareerPathNow@gmail.com</p>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      Copyright © 2024 CareerPathNow
+    </div>
   </footer>
 </body>
 
