--- a/index.html
+++ b/index.html
@@ -15,9 +15,20 @@
   <header class="site-header">
     <div class="site-header-container">
       <a href="#" class="logo"></a>
+      <a href="#" class="logo-desktop">CareerPathNow</a>
+      <nav class="desktop-nav">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About US</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
       <div class="header-actions">
         <button type="button" class="theme-toggle"></button>
         <button type="button" class="burger-menu"></button>
+        <button type="button" class="sign-in">Sign In</button>
+        <button type="button" class="free-trial">Free Trial</button>
       </div>
     </div>
     <nav class="mobile-nav">
