Rename logo class

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="site-header">
     <div class="site-header-container">
-      <a href="#" class="logo"></a>
+      <a href="#" class="logo-mobile"></a>
       <a href="#" class="logo-desktop">CareerPathNow</a>
       <nav class="desktop-nav">
         <ul>
