--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
   <main class="main-content">
     <section>
     </section>
+
+    <section>
+    </section>
+
+    <section>
+    </section>
+
+    <section>
+    </section>
+
+    <section>
+    </section>
+
+    <section>
+    </section>
   </main>
 
   <footer class="site-footer">
